change copy block and add  background color

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       molestias incidunt, praesentium explicabo consequatur porro enim temporibus molestiae consectetur magnam nihil
       eligendi quaerat. Cumque dolorem repellat et, recusandae laudantium libero omnis perspiciatis placeat. Magnam.</p>
 
-    <div class="copy">&copy; Oleg Pavliv 2020</div>
+    <div class="copy">&copy; Victoria Pavliv 2020</div>
   </div>
 </body>
 
